--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "docs:update-package": "yarn dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.20",
-    "@vuepress/theme-default": "2.0.0-rc.88",
+    "@vuepress/bundler-vite": "2.0.0-rc.23",
+    "@vuepress/theme-default": "2.0.0-rc.108",
+    "mermaid": "^11.6.0",
     "sass-embedded": "^1.86.0",
     "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.20"
+    "vuepress": "2.0.0-rc.23",
+    "vuepress-plugin-md-enhance": "^2.0.0-rc.90"
   }
 }
